feat: Added query to get products

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "base": {
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "no-content": "No content"
   },
   "page":{
     "home": {
