wip: Added List styles + getIconSource

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,11 @@
       "description": "=(",
       "link": "Main Page"
     }
+  },
+  "widget": {
+    "products": {
+      "product-line": "Product line",
+      "name": "Name"
+    }
   }
 }
