fix: Small fixes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,7 +17,10 @@
   "widget": {
     "products": {
       "product-line": "Product line",
-      "name": "Name"
+      "name": "Name",
+      "search-placeholder": "Search",
+      "filter": "Filter",
+      "devices": "{{count}} Devices"
     }
   }
 }
