--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
   "base": {
     "loading": "Loading...",
-    "no-content": "No content"
+    "no-content": "No content",
+    "search": "Search..."
   },
   "page":{
     "home": {
