feat: Added styles to filter by

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,8 @@
   "base": {
     "loading": "Loading...",
     "no-content": "No content",
-    "search": "Search..."
+    "search": "Search...",
+    "clear": "Clear"
   },
   "page":{
     "home": {
