feat: Added filter products and updated searching

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,7 +22,8 @@
       "name": "Name",
       "search-placeholder": "Search",
       "filter": "Filter",
-      "devices": "{{count}} Devices"
+      "devices": "{{count}} Devices",
+      "not-found": "Products not found =("
     }
   }
 }
